@@ -32,6 +32,7 @@ pycdf
  - istp.nanfill function to replace fill values with NaN
  - Warn if make CDF without explicitly setting backward compatible mode
    (either true or false); default will change to NOT backward compatible.
+ - Fix epoch_to_num with newer versions of matplotlib.
 pybats
  - Updated gitm.GitmBin reader to fix failures in Python 3.x.
  - Fix for incorrect Kyoto Kp plots.
